tests/tests/Other_tests/tests-Init-20-Array-20-08_Array_AccessingOutOfBounds1/pld-compile.txt
Error in input.c.
Error Index out of bounds : 3. On position 12:1
   "	array[3] = 18;"
     ^

1 error generated.

return code: 1
